[package]
name = "ahmesh"
version = "0.1.0"
edition = "2021"
authors = ["terry.an.bj@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.4.16", features = ["derive"] }
env_logger = "0.10.1"
libc = "0.2.152"
log = "0.4.20"
prost = "0.12.3"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
